--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
+    "luxon": "^3.4.4",
+    "mongoose": "^8.4.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
