--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
     "mongoose": "^8.4.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
