--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "serverstart": "DEBUG=super-cool-app:* npm run devstart"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
