--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=super-cool-app:* npm run devstart"
+    "serverstart": "DEBUG=blogga-api:* npm run devstart"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
