--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^3.4.4",
     "mongoose": "^8.4.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
